UX: More styling & placement

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -5075,6 +5075,7 @@ en:
         pattern_mismatch: "Please match the requested format."
         bad_input: "Please enter a valid input."
       filter: "Filter"
+      filter_placeholder: "Filter topics..."
 
     table_builder:
       title: "Table Builder"
